--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
-<div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
+
+<div class="row-fluid">
+	<div class="span1">
+		this will be the menu
+	</div>
+	<div class="span11">
+		this will be the content
+	</div>
 </div>
